# watchout

./: Cargo.toml  Readme.md  build_mac.sh
resources/: logo.sketch
resources/mac/: Icon.icns
src/: config.rs  delegate.rs  interface.rs  main.rs  runner.rs  watcher.rs
